--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -8,6 +8,10 @@
 # You can make changes and tell OpenAPI Generator to ignore just this file by uncommenting the following line:
 #ApiClient.cs
 build.gradle.kts
+pom.xml
+README.md
+settings.gradle
+
 # You can match any string of characters against a directory, file or extension with a single asterisk (*):
 #foo/*/qux
 # The above matches foo/bar/qux and foo/baz/qux, but not foo/bar/baz/qux
