переделал структуру из kotlin на java

--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -8,12 +8,12 @@
 # You can make changes and tell OpenAPI Generator to ignore just this file by uncommenting the following line:
 #ApiClient.cs
 build.gradle.kts
-pom.xml
-README.md
+#pom.xml
+#README.md
 settings.gradle
-src/main/resources/application.yaml
-src/main/resources/application.properties
-src/main/resources/openapi.yaml
+#src/main/resources/application.yaml
+#src/main/resources/application.properties
+#src/main/resources/openapi.yaml
 
 # You can match any string of characters against a directory, file or extension with a single asterisk (*):
 #foo/*/qux
